# spago

./: .envrc  .envrc.example  .gitignore  .mergify.yml  .stylish-haskell.yaml  .tidyrc.json  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  INTERNALS.md  LICENSE  Makefile  README.md  appveyor.yml  cabal.project  check-chars.mjs  default.nix  flake.nix  package-lock.json  package.json  package.yaml  release.sh  shell.nix  spago.cabal  spago.nix  spago.yaml  stack.yaml  test-macos.js  update.sh
.github/: pull_request_template.md
.github/workflows/: build.yml  cabal.yml  nix-flake.yml  release.yml
.github/سير العمل/: build.yml
app/: Curator.hs  Main.hs  PscPackage.hs  Spacchetti.hs  Spago.hs  Templates.hs  Types.hs
app/Curator/: Metadata.hs
app/PscPackage/: Types.hs
app/Spago/: Build.hs  Config.hs  Dhall.hs  Fetch.hs  FetchPackage.hs  GitHubMetadata.hs  GlobalCache.hs  Messages.hs  PackageSet.hs  Packages.hs  Prelude.hs  PscPackage.hs  Purs.hs  Spacchetti.hs  TH.hs  Templates.hs  Turtle.hs  Watch.hs
core/: spago.yaml
core/src/: CompleteRecordCodec.purs  Config.purs  FS.js  FS.purs  Json.purs  Log.purs  Path.purs  Prelude.purs  Yaml.js  Yaml.purs
diagrams/: spago-flowchart.graphml
docs-search/: .gitignore  .travis.yml  CHANGELOG.md  README.md  ci-npmrc.txt  package-lock.json  package.json  packages.dhall  release.sh  spago.dhall  spago.yaml
docs-search/client-halogen/: README.md  package.json  spago.yaml  vite.config.js
docs-search/common/: spago.yaml
docs-search/index/: spago.yaml
docs-search/test/: Main.purs
npm/: .gitignore  README.md  install  install.js  package.json  spago
output/Docs.Search.IndexBuilder/: docs-search-app.js
script/: prepare-tar.pl
scripts/: check-package-sets-version  check-spacchetti-version  checksum  fetch-templates  get-npm-version  get-version  update-package-sets-version
spaghetto/: .envrc  .gitignore  README.md  default.nix  package-lock.json  package.json  packages.dhall  result  shell.nix  spaghetto  spago.dhall  spago.toml  spago.yaml
spaghetto/.spago/: BuildInfo.purs
spaghetto/lib/: spago.yaml
spaghetto/output/: cache-db.json
spaghetto/src/: Main.purs  Min.purs  Toml.purs  Yaml.js  Yaml.purs
spaghetto/test/: Prelude.purs  Spago.purs
spaghetto/test-fixtures/: bundle-module.js  codegen-opt.txt  older-package-set-tag.yaml  run-output.txt  spago-install-existing-dep-stderr.txt  test-output-stdout.txt
src/Spago/: .Dhall.hs.swp  .PackageSet.hs.swp  Async.hs  Bower.hs  BowerMigration.hs  Build.hs  BuildInfo.purs  CLI.hs  Cmd.hs  Cmd.purs  Config.hs  Config.js  Config.purs  Db.js  Db.purs  Dhall.hs  DryRun.hs  Env.hs  Esbuild.purs  FetchPackage.hs  Git.hs  Git.purs  GitHub.hs  Glob.js  Glob.purs  GlobalCache.hs  Lock.purs  Messages.hs  NewConfig.hs  NodeVersion.purs  PackageSet.hs  Packages.hs  Paths.js  Paths.purs  Prelude.hs  Prelude.purs  Psa.purs  PscPackage.hs  Publish.hs  Purs.hs  (+11 more)
templates/: bower.json  gitignore  packages.dhall  psc-package.json  spacchetti.dhall  spago.dhall  srcMain.purs  testMain.purs
test/: BumpVersionSpec.hs  Main.hs  Prelude.purs  PscPackageSpec.hs  PublishSpec.hs  Spago.purs  SpagoSpec.hs  UnitSpec.hs  Utils.hs  psc-package-test.py  spago-test.py  utils.py  windows_test_wrapper.py
test-fixtures/: alternate-backend-output.txt  build-json-truncated-warn.purs  bundle-app-browser-map.js  bundle-app-browser-map.js.map  bundle-app-browser.js  bundle-app-map.js  bundle-app-map.js.map  bundle-app-node-map.js  bundle-app-node-map.js.map  bundle-app-node.js  bundle-app.js  bundle-default.js  bundle-main-not-exported-error.txt  bundle-module-map.js  bundle-module-map.js.map  bundle-module.js  bundle-no-main-error.txt  bundle-refuse-overwrite-output.txt  censor-stats-output.txt  check-direct-import-transitive-dependency-test.txt  check-direct-import-transitive-dependency.txt  check-pedantic-packages.txt  check-strict.purs  check-strict.yaml  check-unused-dependency.txt  check-unused-source-and-test-dependency.txt  check-unused-test-dependency.txt  circular-dependencies.txt  codegen-opt.txt  graph-modules-topo.txt  graph-modules.dot  graph-modules.json  graph-packages-topo.txt  graph-packages.dot  graph-packages.json  init-invalid-dirname.txt  json-errors-err.txt  list-dependencies.json  list-dependencies.txt  list-packages-registry.txt  (+83 more)
test-fixtures/1146-cli-help/: build.txt  registry-search.txt  root-error-command.txt  root-error-option.txt  root-help.txt
test-fixtures/1281-local-fs-extra-packages/: expected-stdout.txt
test-fixtures/build-info/: multi-package-stdout.txt  single-package-stdout.txt
test-fixtures/config/: no-workspace-anywhere.txt
test-fixtures/git-declared-deps/: with-declared-deps.yaml  without-declared-deps.yaml
test-fixtures/package-typo-suggestions/: 1.txt  2.txt  3.txt
test-fixtures/pedantic/: check-pedantic-packages.txt  (+10 more)
(+4314 files in other folders)
