cabal-version: 2.4

name:           spago
version:        0.20.4
description:    Please see the README on GitHub at <https://github.com/purescript/spago#readme>
homepage:       https://github.com/purescript/spago#readme
bug-reports:    https://github.com/purescript/spago/issues
author:         Justin Woo, Fabrizio Ferrai
maintainer:     @jusrin00, @fabferrai
copyright:      2018-2020 Justin Woo, Fabrizio Ferrai
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md
    templates/bower.json
    templates/docs-search-app-0.0.10.js
    templates/docs-search-app-0.0.11.js
    templates/gitignore
    templates/packages.dhall
    templates/purescript-docs-search-0.0.10
    templates/purescript-docs-search-0.0.11
    templates/purs-repl
    templates/spago.dhall
    templates/srcMain.purs
    templates/testMain.purs

source-repository head
  type: git
  location: https://github.com/purescript/spago

common defaults
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Spago.Async
    Spago.Bower
    Spago.Build
    Spago.CLI
    Spago.Command.Init
    Spago.Command.Ls
    Spago.Command.Path
    Spago.Command.Verify
    Spago.Config
    Spago.Dhall
    Spago.DryRun
    Spago.Env
    Spago.FetchPackage
    Spago.Git
    Spago.GitHub
    Spago.GlobalCache
    Spago.Messages
    Spago.Packages
    Spago.PackageSet
    Spago.Prelude
    Spago.PscPackage
    Spago.Purs
    Spago.RunEnv
    Spago.Templates
    Spago.TH
    Spago.Types
    Spago.Version
    Spago.Watch
  other-modules:
    Paths_spago
  autogen-modules:
    Paths_spago
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints
  build-depends:
      Glob
    , aeson
    , aeson-pretty
    , ansi-terminal
    , async-pool
    , base >=4.7 && <5
    , bower-json
    , bytestring
    , containers
    , cryptonite
    , dhall >=1.39.0
    , directory >=1.3.4.0
    , either
    , file-embed
    , filepath
    , foldl
    , fsnotify
    , generic-lens
    , http-client
    , http-conduit
    , http-types
    , lens-family-core
    , megaparsec
    , mtl
    , network-uri
    , open-browser
    , optparse-applicative
    , prettyprinter
    , process
    , retry
    , rio >=0.1.16.0
    , rio-orphans
    , safe
    , semver-range
    , stm
    , stringsearch
    , tar
    , template-haskell
    , temporary
    , text <1.3
    , time
    , transformers
    , turtle
    , unliftio
    , unordered-containers
    , utf8-string
    , versions
    , with-utf8
    , zlib

executable spago
  import: defaults
  main-is: Spago.hs
  other-modules:
    Paths_spago
  autogen-modules:
    Paths_spago
  hs-source-dirs: app
  build-depends:
      ansi-terminal
    , base >=4.7 && <5
    , spago
    , text <1.3
    , turtle
    , with-utf8
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -main-is Spago -optP-Wno-nonportable-include-path

test-suite spec
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    BumpVersionSpec
    Spago.PursSpec
    SpagoSpec
    Spec
    UnitSpec
    Utils
    Paths_spago
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -main-is Main
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , containers
    , directory
    , extra
    , hspec ==2.*
    , hspec-megaparsec
    , megaparsec
    , process
    , spago
    , temporary
    , text <1.3
    , turtle
    , versions
  build-tool-depends:
      hspec-discover:hspec-discover == 2.*
    -- we need the the executable available for the end to end tests
    , spago:spago -any
